[package]
name = "ongeki-io"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = '1.4.0'
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8.12"
hidapi-rusb = "1.3.3"
pretty-hex = "0.4.1"
byteorder = "1.5.0"
dyn-dyn = "0.1.2"
better-panic = "0.3.0"


[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_XboxController",
    "Win32_UI_WindowsAndMessaging",
]
