[package]
name = "ongeki-io"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = '1.5.0'
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
hidapi = "2.6.3"
pretty-hex = "0.4.1"
byteorder = "1.5.0"
dyn-dyn = "0.2.0"
color-backtrace = "0.7.0"
rgb = "0.8.50"


[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_XboxController",
    "Win32_UI_WindowsAndMessaging",
]
